@@ -1,3 +1,0 @@
-extra_DIST = functions.cpp
-noinst_HEADERS = functions.h
-
