@@ -18,6 +18,7 @@ Snapshot ????-??-?? ToDo
 Now
  * GP
   - Add type optimization.
+  - Move functions to base GP folder.
 
 Version 0.0.5 2012-09-05
  - Support for C++0x (GCC 4.5.3)
